# TDP4

./: .gitignore  CMakeLists.txt
src/: app.c  dgemm.c  dgemm.h  dispatch.c  dispatch.h  exe  fox.c  fox.h  test.c  util.c  util.h
